# zlibbioc

./: ChangeLog  DESCRIPTION  NAMESPACE  configure  configure.ac
R/: zzz.R
man/: pkgconfig.Rd  zlibbioc-package.Rd
src/: Makevars.in  Makevars.win
src/zlib-1.2.5/: Makefile  Makefile.in  configure
src/zlib-1.2.5/win32/: Makefile.gcc  zlib.def
vignettes/: UsingZlibbioc.Rnw
